# rusty-journal-pub

./: .env  Cargo.toml  README.md  script.sh
bybit/: Cargo.toml
bybit/src/: lib.rs
bybit/src/parsers/: mod.rs  pos_infos.rs  trade_records.rs  utils.rs
bybit/src/structs/: Credentials.rs  NewPageObject.rs  PositionInfo.rs  TradeRecord.rs  mod.rs
logger/src/: lib.rs
notion/: Cargo.toml
notion/src/: lib.rs  parser.rs
notion/src/data_types/: Date.rs  Number.rs  Select.rs  Title.rs  mod.rs
notion/src/structs/: Credentials.rs  RequestJSON.rs  TradeEntity.rs  mod.rs
rusty_journal/: Cargo.toml
rusty_journal/src/: main.rs
