[package]
name = "bybit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = {version = "0.11.18", features = ["json"]}
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10.7"
notion ={ path = "../notion"}
